@@ -256,7 +256,7 @@ public class GedcomAnalyzerServiceTests {
                 .stream()
                 .mapToInt(GedcomAnalyzerService.SurenamesCardinality::cardinality)
                 .sum();
-        System.out.println("getImmigrantsCitiesCardinalityByPlaceOfAnyEvent: " + places.size() + " places and " + totalImmigrants + " immigrants");
+        System.out.println(STR."getImmigrantsCitiesCardinalityByPlaceOfAnyEvent: \{places.size()} places and \{totalImmigrants} immigrants");
         places
                 .forEach(cardinality -> System.out.println(
                         StringUtils.leftPad(cardinality.country(), 80)
@@ -264,8 +264,10 @@ public class GedcomAnalyzerServiceTests {
                                 + " - " + String.format("%5.4f%%", cardinality.percentage())
                                 + " - " + cardinality.surnames()));
 
-        System.out.println("people by city: " + places.get(0).country() + " (" + places.get(0).persons().size() + ")");
-        places.get(0).persons().forEach(System.out::println);
+        if (!places.isEmpty()) {
+            System.out.println(STR."people by city: \{places.getFirst().country()} (\{places.getFirst().persons().size()})");
+            places.getFirst().persons().forEach(System.out::println);
+        }
     }
 
     @Test
